--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,14 +39,13 @@
             <!-- Картинка -->
             <ImageView
                 android:id="@+id/logoImageView"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:src="@drawable/ic_college_logo"
+                android:layout_width="329dp"
+                android:layout_height="159dp"
                 android:contentDescription="Логотип колледжа"
-                android:layout_marginBottom="24dp"
-                app:layout_constraintTop_toBottomOf="@id/titleTextView"
+                android:src="@drawable/img"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
             <!-- Основной текст с возможностью прокрутки -->
             <TextView
