--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -134,8 +134,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
 
-        android:backgroundTint="@color/black"
+        android:backgroundTint="#174f94"
         android:text="Зарегистрироваться"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
