--- a/app/src/main/res/layout/nav_header_profile.xml
+++ b/app/src/main/res/layout/nav_header_profile.xml
@@ -12,13 +12,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+    <!-- Только один источник! -->
+
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_college_logo"
+        android:layout_width="81dp"
+        android:layout_height="78dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/ic_college_logo" />
 
     <TextView
         android:layout_width="match_parent"
@@ -31,5 +32,5 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="priem.unikit@mgutm.ru" />
+        android:text="" />
 </LinearLayout>
