--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/titleTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/TestFoAbiturient"
+                android:text="Администрирование"
                 android:textSize="24sp"
                 android:textColor="@color/black"
                 android:gravity="center"
@@ -31,28 +31,68 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
-            <Button
-                android:id="@+id/checkButton"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/contentTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Тесты абитуриентов "
-                android:textColor="@color/white"
-                android:layout_marginTop="24dp"
-                android:backgroundTint="#174f94"
+                android:text="@string/WantBeAdmin"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:lineSpacingExtra="4dp"
+                android:layout_marginBottom="24dp"
                 app:layout_constraintTop_toBottomOf="@id/titleTextView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
             <Button
-                android:id="@+id/addInfoButton"
+                android:id="@+id/WantBeAdmin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Добавить материалы на 2025 год "
+                android:text="Получить права администратора"
                 android:textColor="@color/white"
                 android:layout_marginTop="24dp"
                 android:backgroundTint="#174f94"
-                app:layout_constraintTop_toBottomOf="@id/checkButton"
+                app:layout_constraintTop_toBottomOf="@id/contentTextView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/contentTextView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:lineSpacingExtra="4dp"
+                android:text="@string/AlreadyAdmin"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/WantBeAdmin" />
+
+            <Button
+                android:id="@+id/checkButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:backgroundTint="#174f94"
+                android:text="Тесты абитуриентов "
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/contentTextView1" />
+
+            <Button
+                android:id="@+id/addInfoButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="#174f94"
+                android:text="Добавить материалы на текущий год "
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/checkButton" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
