--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,86 +7,84 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
     android:background="@color/white">
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
-        android:src="@drawable/image1"
-        app:layout_constraintEnd_toEndOf="parent"
+    <ImageButton
+        android:id="@+id/back_btn"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@color/white"
+        android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="384dp"
+        android:layout_height="183dp"
+        android:layout_marginTop="16dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/image1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/back_btn" />
+
     <TextView
         android:id="@+id/login_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-
+        android:layout_marginTop="24dp"
+        android:gravity="center"
         android:text="Авторизация"
         android:textSize="30sp"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="34dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@id/imageView3" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/email_lin"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="34dp"
-        app:layout_constraintTop_toBottomOf="@id/login_title"
+        android:layout_width="316dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="24dp"
+        android:orientation="horizontal"
+        android:paddingVertical="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toBottomOf="@id/login_title">
 
-        <ImageView
-            android:id="@+id/icon_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_gravity="center_vertical" />
 
         <EditText
             android:id="@+id/email_et"
-            android:layout_width="242dp"
+            android:layout_width="346dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
-
+            android:layout_weight="1"
             android:hint="Почта"
-            />
-
+            android:inputType="textEmailAddress" />
     </LinearLayout>
 
 
+
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/password_lin"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/email_lin"
-        app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        android:paddingVertical="8dp"
+        app:layout_constraintEnd_toEndOf="@id/email_lin"
+        app:layout_constraintStart_toStartOf="@id/email_lin"
+        app:layout_constraintTop_toBottomOf="@id/email_lin">
 
-        <ImageView
-            android:id="@+id/icon_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_gravity="center_vertical"
-            />
 
         <EditText
             android:id="@+id/password_et"
-            android:layout_width="242dp"
+            android:layout_width="336dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
-
-            android:hint="Пароль"
-            android:inputType="textPassword"
-            />
-
+            android:layout_weight="1"
+            android:hint="Пароль "
+            android:inputType="textPassword" />
     </LinearLayout>
 
     <Button
@@ -112,19 +110,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_btn">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Нет аккаунта?" />
-
-        <TextView
-            android:id="@+id/go_to_register_activity_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="7dp"
-            android:text="Зарегистрироваться"
-            android:textColor="@color/black" />
-
     </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/go_to_register_activity_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Zaregistr"
+        android:textColor="#174f94"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_btn"
+        app:layout_constraintVertical_bias="0.233" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
