--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -5,135 +5,123 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SingUpActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:padding="16dp"
+    tools:context=".SingUpActivity">
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/back_btn"
-
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/transparent"
         android:backgroundTint="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="24dp"/>
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
-        android:src="@drawable/image2"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="384dp"
+        android:layout_height="183dp"
+        android:layout_marginTop="16dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/image2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/back_btn" />
+
     <TextView
         android:id="@+id/login_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-
+        android:layout_marginTop="24dp"
+        android:gravity="center"
         android:text="Регистрация"
         android:textSize="30sp"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="34dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@id/imageView3" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/email_lin"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="34dp"
-        app:layout_constraintTop_toBottomOf="@id/login_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:orientation="horizontal"
+        android:paddingVertical="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toBottomOf="@id/login_title">
 
-        <ImageView
-            android:id="@+id/icon_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
 
-            android:layout_gravity="center_vertical" />
 
         <EditText
             android:id="@+id/email_et"
-            android:layout_width="242dp"
+            android:layout_width="346dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
-
+            android:layout_weight="1"
             android:hint="Почта"
-            />
-
+            android:inputType="textEmailAddress" />
     </LinearLayout>
 
+
+
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/username_lin"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/email_lin"
-        app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        android:paddingVertical="8dp"
+        app:layout_constraintEnd_toEndOf="@id/email_lin"
+        app:layout_constraintStart_toStartOf="@id/email_lin"
+        app:layout_constraintTop_toBottomOf="@id/email_lin">
 
-        <ImageView
-            android:id="@+id/icon_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
 
-            android:layout_gravity="center_vertical" />
 
         <EditText
             android:id="@+id/username_et"
-            android:layout_width="242dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
-
+            android:layout_weight="1"
             android:hint="Фамилия Имя"
-            />
-
+            android:inputType="textPersonName" />
     </LinearLayout>
+
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/password_lin"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/username_lin"
-        app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        android:paddingVertical="8dp"
+        app:layout_constraintEnd_toEndOf="@id/username_lin"
+        app:layout_constraintStart_toStartOf="@id/username_lin"
+        app:layout_constraintTop_toBottomOf="@id/username_lin">
 
-        <ImageView
-            android:id="@+id/icon_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
 
-            android:layout_gravity="center_vertical"
-            />
 
         <EditText
             android:id="@+id/password_et"
-            android:layout_width="242dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
-
-            android:hint="Пароль(более 6 символов)"
+            android:layout_weight="1"
+            android:hint="Пароль (более 6 символов)"
             android:inputType="textPassword" />
-
-
     </LinearLayout>
+
+
 
     <Button
         android:id="@+id/sign_up_btn"
         android:layout_width="268dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-
         android:backgroundTint="#174f94"
         android:text="Зарегистрироваться"
         android:textColor="@color/white"
@@ -142,16 +130,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_lin"/>
 
+
+
     <TextView
         android:id="@+id/backBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="Уже есть аккаунт?"
+        android:textColor="#174f94"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />
-
+        app:layout_constraintTop_toBottomOf="@id/sign_up_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
