--- a/app/src/main/res/layout/nav_header_profile.xml
+++ b/app/src/main/res/layout/nav_header_profile.xml
@@ -12,14 +12,42 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <!-- Только один источник! -->
+    <!-- Контейнер для изображений -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="81dp"
-        android:layout_height="78dp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/ic_college_logo" />
+        <!-- Первое изображение -->
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="81dp"
+            android:layout_height="78dp"
+            android:paddingTop="@dimen/nav_header_vertical_spacing"
+            app:srcCompat="@drawable/ic_college_logo" />
+
+        <!-- Второе изображение -->
+        <ImageView
+            android:id="@+id/imageViewTG"
+            android:layout_width="43dp"
+            android:layout_height="46dp"
+            android:paddingLeft="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            app:srcCompat="@drawable/ic_tg" />
+
+        <!-- Третье изображение -->
+        <ImageView
+            android:id="@+id/imageViewVK"
+            android:layout_width="41dp"
+            android:layout_height="46dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:paddingLeft="8dp"
+            app:srcCompat="@drawable/ic_wk" />
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -33,4 +61,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="" />
+
 </LinearLayout>
+
