--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -11,8 +11,8 @@
 
     <ImageButton
         android:id="@+id/back_btn"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
@@ -23,8 +23,8 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="384dp"
-        android:layout_height="183dp"
+        android:layout_width="364dp"
+        android:layout_height="116dp"
         android:layout_marginTop="16dp"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
@@ -35,13 +35,14 @@
 
     <TextView
         android:id="@+id/login_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="376dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="Регистрация"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView3" />
 
@@ -115,31 +116,86 @@
             android:inputType="textPassword" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/captcha_layout"
+        android:layout_width="359dp"
+        android:layout_height="140dp"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        android:background="#F5F5F5"
+        android:padding="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/password_lin"
+        app:layout_constraintTop_toBottomOf="@id/password_lin">
+
+        <TextView
+            android:layout_width="122dp"
+            android:layout_height="wrap_content"
+            android:text="   Введите капчу:"
+            android:textColor="#333"
+            android:textSize="14sp" />
+
+        <LinearLayout
+            android:layout_width="322dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/captcha_text"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:textColor="#174f94"
+                android:textSize="20sp"
+                android:textStyle="bold|italic" />
+
+
+            <Button
+                android:id="@+id/refresh_captcha_btn"
+                android:layout_width="154dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="8dp"
+                android:backgroundTint="#174f94"
+                android:text="Обновить"
+                android:textColor="@color/white" />
+
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/captcha_input"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp"
+            android:hint="Введите текст"
+            android:padding="12dp" />
+
+    </LinearLayout>
 
 
     <Button
         android:id="@+id/sign_up_btn"
         android:layout_width="268dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
         android:backgroundTint="#174f94"
         android:text="Зарегистрироваться"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_lin"/>
-
-
+        app:layout_constraintTop_toBottomOf="@+id/captcha_layout" />
 
     <TextView
         android:id="@+id/backBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="4dp"
         android:text="Уже есть аккаунт?"
         android:textColor="#174f94"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sign_up_btn" />
 
